--- a/UnityProject/Delight/Packages/manifest.json
+++ b/UnityProject/Delight/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "1.2.16",
+    "com.unity.device-simulator": "2.2.4-preview",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.0",
     "com.unity.test-framework": "1.1.13",
